--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <div class="container">
+        <input id="age" value="30" />
         <nav>
           <ul>
             <li><a href="#about">О нас</a></li>
@@ -270,6 +271,8 @@
         </div>
       </div>
     </div>
+
+    <script src="sceripts.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
